--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI: mongodb+srv://sandlot7665:<db_password>@cluster0.vsoeh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI: mongodb+srv://sandlot7665:Seastar-2015@cluster0.vsoeh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
